# 003_streamlit_split_and_summarize_resumido

./: README.md  main.py  pyproject.toml  requirements.txt
