[tool.poetry]
name = "003_streamlit_split_and_summarize_local"
version = "1.0.0"
description = "Aplicación de Streamlit para resumir PDFs y TXT de forma local (simulada)"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.51.0"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
