[tool.poetry]
name = "003_streamlit_split_and_summarize_local"
version = "1.0.0"
description = "App local de resúmenes PDF/TXT simulados"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.51.0"
pypdf2 = "3.0.1"
pandas = "2.3.3"
numpy = "2.3.5"

[tool.poetry.extras]
# si no tienes extras, se puede dejar vacío

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.settings]
package-mode = false
