[tool.poetry]
name = "003_streamlit_split_and_summarize_realista"
version = "1.0.0"
description = "Resumidor automático PDF/TXT sin OpenAI"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "1.51.0"
pypdf2 = "3.0.1"
numpy = "1.26.0"
pandas = "2.3.3"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
